--- a/restaurant/web/css/stylish-portfolio.css
+++ b/restaurant/web/css/stylish-portfolio.css
@@ -162,6 +162,18 @@ hr.small {
     -o-background-size: cover;
 }
 
+.header_sm {
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(../../img/bg-restaurant.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
 /* About */
 
 .about {
