--- a/restaurant/web/restaurant-menager/css/stylish-portfolio.css
+++ b/restaurant/web/restaurant-menager/css/stylish-portfolio.css
@@ -444,3 +444,63 @@ footer {
   background: #fff;
   min-height: 460px;
 }
+
+
+.rowtitle {
+    float:left;
+    opacity:1;
+    z-index:3;
+    border-collapse:collapse;
+    table-layout:fixed;
+        height:50px;
+    width:50px;
+    min-width:50px;
+    min-height:50px;
+    margin:0px;
+    padding:0px;
+}
+
+    .conftr,
+    .conftd {
+      text-align: center;
+      border: 1px solid #dddddd;
+    }
+
+    .confth {
+      font-weight: bold;
+    }
+
+.table-striped tbody > tr:nth-child(odd) > td.conftd,
+.table-striped tbody > tr:nth-child(odd) > th.confth {
+  background-color: #f9f9f9;
+}
+
+.columntitle {
+    z-index:1;
+    position:fixed;
+        border-collapse:collapse;
+    table-layout:fixed;
+        height:50px;
+    width:50px;
+    min-width:50px;
+    min-height:50px;
+    margin:0px;
+    padding:0px;
+}
+
+.content {
+    position:fixed;
+    left:60px;
+    top:59px;
+    width:255px;
+    overflow-x:auto;
+    display: block;
+        border-collapse:collapse;
+    table-layout:fixed;
+        height:50px;
+    width:50px;
+    min-width:50px;
+    min-height:50px;
+    margin:0px;
+    padding:0px;
+}
